--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 张友涵的blog
-subtitle: '前端技术为主'
+title: PENGUIN-SHED-94
+subtitle: 'keepknowledgeastreasure'
 description: '记录一些知识点'
 keywords:
 author: Youhan Zhang
-language: zh-CN
+language: en
 timezone: ''
 
 # URL
