--- a/blog/themes/landscape/_config.yml
+++ b/blog/themes/landscape/_config.yml
@@ -1,8 +1,8 @@
 # Header
-menu:
-  Home: /
-  Archives: /archives
-rss: /atom.xml
+# menu:
+#   Home: /
+#   Archives: /archives
+# rss: /atom.xml
 
 # Content
 excerpt_link: Read More
@@ -30,7 +30,7 @@ show_count: false
 # Miscellaneous
 google_analytics:
 gauges_analytics:
-favicon: /favicon.png
+favicon: /blog/img/favicon.png
 twitter:
 google_plus:
 fb_admins:
